<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sample="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/setting_title_search_engine">

    <ListPreference
        android:icon="@drawable/icon_search"
        android:key="@string/sp_search_engine"
        android:defaultValue="0"
        android:title="@string/setting_title_search_engine"
        android:summary="@string/setting_summary_search_engine"
        android:entries="@array/setting_entries_search_engine"
        android:entryValues="@array/setting_values_search_engine"/>

    <EditTextPreference
        android:icon="@drawable/icon_edit"
        android:defaultValue="https://www.ecosia.org/search?q="
        android:key="sp_search_engine_custom"
        android:title="@string/setting_title_searchEngine"
        android:summary="@string/setting_summary_searchEngine"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_title_userAgent">

    <ListPreference
        android:icon="@drawable/icon_useragent"
        android:key="@string/sp_useragent"
        android:defaultValue="0"
        android:title="@string/setting_title_userAgent"
        android:summary="@string/setting_summary_userAgent"
        android:entries="@array/setting_entries_useragent"
        android:entryValues="@array/setting_values_useragent"/>

    <EditTextPreference
        android:icon="@drawable/icon_edit"
        android:selectable="true"
        android:key="@string/sp_useragent_custom"
        android:title="@string/setting_title_userAgent_custom"
        android:summary="@string/setting_summary_userAgent_custom"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_title_content">

        <com.pavelsikun.seekbarpreference.iconSeekBarPreferenceCompat
            android:key="sp_fontSize_seekbar"
            android:title="@string/setting_title_font"
            android:summary="@string/setting_summary_font"
            android:enabled="true"
            android:defaultValue="100"

            sample:icon="@drawable/icon_size"
            sample:msbp_minValue="30"
            sample:msbp_maxValue="300"
            sample:msbp_measurementUnit="%"
            sample:msbp_dialogEnabled="true"/>

        <CheckBoxPreference
            android:key="@string/sp_images"
            android:icon="@drawable/icon_image"
            android:defaultValue="true"
            android:title="@string/setting_title_images"
            android:summary="@string/setting_summary_images"/>

        <CheckBoxPreference android:key="@string/sp_savedata"
            android:icon="@drawable/ic_save_data"
            android:defaultValue="true"
            android:title="@string/setting_title_save_data"
            android:summary="@string/setting_summary_save_data"/>

        <CheckBoxPreference android:key="saveHistory"
            android:icon="@drawable/icon_history"
            android:defaultValue="true"
            android:title="@string/setting_title_history"
            android:summary="@string/setting_summary_history"/>

        <CheckBoxPreference android:key="sp_remote"
            android:icon="@drawable/icon_remote"
            android:defaultValue="false"
            android:title="@string/setting_title_remote"
            android:summary="@string/setting_summary_remote"/>

        <CheckBoxPreference android:key="@string/sp_location"
            android:icon="@drawable/icon_location"
            android:defaultValue="false"
            android:title="@string/setting_title_location"
            android:summary="@string/setting_summary_location"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_title_adblock">

        <CheckBoxPreference
            android:key="@string/sp_ad_block"
            android:icon="@drawable/icon_block"
            android:defaultValue="true"
            android:title="@string/setting_title_adblock"
            android:summary="@string/setting_summary_adblock"/>

        <Preference
            android:key="start_AdBlock"
            android:title="@string/setting_title_whitelist"
            android:icon="@drawable/icon_list"
            android:summary="@string/setting_summary_whitelist"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_title_javascript">

        <CheckBoxPreference
            android:key="@string/sp_javascript"
            android:icon="@drawable/icon_java"
            android:defaultValue="true"
            android:title="@string/setting_title_javascript"
            android:summary="@string/setting_summary_javascript"/>

        <Preference
            android:key="start_java"
            android:title="@string/setting_title_whitelistJS"
            android:icon="@drawable/icon_list"
            android:summary="@string/setting_summary_whitelistJS"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_title_cookie">

        <CheckBoxPreference
            android:key="@string/sp_cookies"
            android:icon="@drawable/icon_cookie"
            android:defaultValue="true"
            android:title="@string/setting_title_cookie"
            android:summary="@string/setting_summary_cookie"/>

        <Preference
            android:key="start_cookie"
            android:title="@string/setting_title_whitelistCookie"
            android:icon="@drawable/icon_list"
            android:summary="@string/setting_summary_whitelistCookie"/>

    </PreferenceCategory>

</PreferenceScreen>