<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory android:title="@string/setting_title_theme">

        <ListPreference
            android:icon="@drawable/icon_theme"
            android:key="sp_theme"
            android:defaultValue="1"
            android:title="@string/setting_theme"
            android:summary="@string/setting_theme_summary"
            android:entries="@array/setting_entries_theme"
            android:entryValues="@array/setting_values_theme"/>



        <CheckBoxPreference android:key="sp_invert"
            android:icon="@drawable/icon_night"
            android:defaultValue="false"
            android:title="@string/setting_title_inverted"
            android:summary="@string/setting_summary_inverted"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_title_toolbar">

        <ListPreference
            android:title="@string/action_fullscreen"
            android:icon="@drawable/icon_fullscreen"
            android:summary="@string/action_fullscreen_summary"
            android:key="fullscreen"
            android:defaultValue="2"
            android:entries="@array/listArrayFull"
            android:entryValues="@array/listValuesFull" />

        <CheckBoxPreference
            android:key="hideToolbar"
            android:icon="@drawable/icon_fullscreen"
            android:defaultValue="true"
            android:title="@string/setting_title_hideToolbar"
            android:summary="@string/setting_summary_hide"/>

        <CheckBoxPreference android:key="sp_toolbarShow"
            android:icon="@drawable/icon_show"
            android:defaultValue="false"
            android:title="@string/setting_title_toolbarShow"
            android:summary="@string/setting_summary_toolbarShow"/>

        <CheckBoxPreference android:key="sp_navibuttonShow"
            android:icon="@drawable/icon_more"
            android:defaultValue="false"
            android:title="@string/setting_title_navibuttonShow"
            android:summary="@string/setting_summary_navibuttonShow"/>

        <ListPreference
            android:title="@string/setting_title_nav_pos"
            android:icon="@drawable/icon_arrow_expand"
            android:summary="@string/setting_summary_nav_pos"
            android:key="nav_position"
            android:defaultValue="0"
            android:entries="@array/setting_entries_nav_pos"
            android:entryValues="@array/setting_values_nav_pos" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_title_behavior">

        <EditTextPreference
            android:defaultValue="https://github.com/scoute-dich/browser"
            android:key="favoriteURL"
            android:title="@string/setting_title_homepage"
            android:summary="@string/setting_summary_homepage"
            android:icon="@drawable/ic_homepage"/>

        <CheckBoxPreference android:key="start_tabStart"
            android:icon="@drawable/ic_collections_bookmark"
            android:defaultValue="false"
            android:title="@string/setting_overView_onStart_title"
            android:summary="@string/setting_overView_onStart_summary"/>

        <ListPreference
            android:title="@string/setting_overView"
            android:icon="@drawable/view_headline"
            android:summary="@string/setting_summary_tab"
            android:key="start_tab"
            android:defaultValue="0"
            android:entries="@array/setting_entries_tab"
            android:entryValues="@array/setting_values_tab" />

     <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/icon_exit"
            android:key="sp_close_browser_confirm"
            android:title="@string/setting_title_confirm_exit"
            android:summary="@string/setting_summary_confirm_exit" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/icon_close"
            android:key="sp_close_tab_confirm"
            android:title="@string/setting_title_confirm_tab_close"
            android:summary="@string/setting_summary_confirm_tab_close" />

        <CheckBoxPreference android:key="sp_reopenLastTab"
            android:icon="@drawable/icon_tab_plus"
            android:defaultValue="false"
            android:title="@string/setting_title_reopenLastTab"
            android:summary="@string/setting_summary_reopenLastTab"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_Wintan">

        <CheckBoxPreference
            android:title="@string/preference_left_hand"
            android:icon="@drawable/lefthand"
            android:summary="@string/preference_left_hand_summary"
            android:key="@string/sp_rtl"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:title="@string/action_translucentstatus"
            android:defaultValue="false"
            android:key="@string/sp_translucentstatus"
            android:summary="@string/action_translucentstatus_summary"
            android:icon="@drawable/icon_fullscreen"/>


        <ListPreference
            android:title="@string/action_rotation"
            android:icon="@drawable/screen_rotation"
            android:summary="@string/action_rotation_summary"
            android:key="@string/sp_orientation"
            android:defaultValue="@string/def_rot"
            android:entries="@array/listArrayOrientation"
            android:entryValues="@array/listValuesOrientation" />

        <CheckBoxPreference
            android:title="@string/settings_Wintan_title"
            android:icon="@drawable/arrowupdown"
            android:summary="@string/settings_Wintan_summary"
            android:key="@string/sp_wintan_mode"
            android:defaultValue="true" />

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/setting_gestures">

    <CheckBoxPreference
        android:icon="@drawable/gesture_tap"
        android:key="sp_gestures_use"
        android:defaultValue="true"
        android:title="@string/setting_gestures_use_title"
        android:summary="@string/setting_gestures_use_summary"/>

    <PreferenceCategory android:summary="@string/setting_title_on_toolbar">

        <ListPreference
            android:icon="@drawable/icon_arrow_up_gest"
            android:title="@string/setting_gesture_up"
            android:key="setting_gesture_tb_up"
            android:defaultValue="08"
            android:entries="@array/setting_entries_gestures"
            android:entryValues="@array/setting_values_gestures" />

        <ListPreference
            android:icon="@drawable/icon_arrow_down_gest"
            android:title="@string/setting_gesture_down"
            android:key="setting_gesture_tb_down"
            android:defaultValue="01"
            android:entries="@array/setting_entries_gestures"
            android:entryValues="@array/setting_values_gestures" />

        <ListPreference
            android:icon="@drawable/icon_arrow_left_gest"
            android:title="@string/setting_gesture_left"
            android:key="setting_gesture_tb_left"
            android:defaultValue="07"
            android:entries="@array/setting_entries_gestures"
            android:entryValues="@array/setting_values_gestures" />

        <ListPreference
            android:icon="@drawable/icon_arrow_right_gest"
            android:title="@string/setting_gesture_right"
            android:key="setting_gesture_tb_right"
            android:defaultValue="06"
            android:entries="@array/setting_entries_gestures"
            android:entryValues="@array/setting_values_gestures" />

    </PreferenceCategory>

    <PreferenceCategory android:summary="@string/setting_title_on_nav">

        <ListPreference
            android:icon="@drawable/icon_arrow_up_gest"
            android:title="@string/setting_gesture_up"
            android:key="setting_gesture_nav_up"
            android:defaultValue="04"
            android:entries="@array/setting_entries_gestures"
            android:entryValues="@array/setting_values_gestures" />

        <ListPreference
            android:icon="@drawable/icon_arrow_down_gest"
            android:title="@string/setting_gesture_down"
            android:key="setting_gesture_nav_down"
            android:defaultValue="05"
            android:entries="@array/setting_entries_gestures"
            android:entryValues="@array/setting_values_gestures" />

        <ListPreference
            android:icon="@drawable/icon_arrow_left_gest"
            android:title="@string/setting_gesture_left"
            android:key="setting_gesture_nav_left"
            android:defaultValue="03"
            android:entries="@array/setting_entries_gestures"
            android:entryValues="@array/setting_values_gestures" />

        <ListPreference
            android:icon="@drawable/icon_arrow_right_gest"
            android:title="@string/setting_gesture_right"
            android:key="setting_gesture_nav_right"
            android:defaultValue="02"
            android:entries="@array/setting_entries_gestures"
            android:entryValues="@array/setting_values_gestures" />

    </PreferenceCategory>

</PreferenceCategory>


</PreferenceScreen>