<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="4dp"
    android:paddingBottom="4dp"
    >
    <TextView
        android:id="@+id/popupmenu_settings"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:lines="1"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/setting_label"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/popupmenu_other"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:lines="1"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/menu_more"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/popupmenu_share"
        android:text="@string/menu_share"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:clickable="true"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:background="?android:attr/selectableItemBackground"
        android:lines="1"
        android:ellipsize="end" />

    <TextView
            android:id="@+id/popupmenu_save"
            android:text="@string/menu_save"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:clickable="true"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:background="?android:attr/selectableItemBackground"
            android:lines="1"
            android:ellipsize="end" />



</LinearLayout>

