<?xml version="1.0" encoding="utf-8"?>
<!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    app:cardElevation="10dp"
    android:background="?android:attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/popupsubmenu_more"
        android:paddingTop="4dp"
        android:paddingBottom="4dp">



        <TextView
            android:id="@+id/submenu_newTabOpen"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:includeFontPadding="false"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/main_menu_new_tabOpen"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?android:attr/textColorPrimary"
            android:background="?android:attr/selectableItemBackground"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:clickable="true"
            android:textSize="16sp"/>


        <TextView
            android:id="@+id/submenu_closeTab"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/menu_closeTab"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/submenu_openFavorite"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:includeFontPadding="false"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/menu_openHome"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?android:attr/textColorPrimary"
            android:background="?android:attr/selectableItemBackground"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:clickable="true"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/submenu_openBookmark"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:includeFontPadding="false"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/menu_openBookmark"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?android:attr/textColorPrimary"
            android:background="?android:attr/selectableItemBackground"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:clickable="true"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/submenu_openHistory"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:includeFontPadding="false"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/menu_openHistory"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?android:attr/textColorPrimary"
            android:background="?android:attr/selectableItemBackground"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:clickable="true"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/submenu_fileManager"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:includeFontPadding="false"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/menu_other_fileManager"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?android:attr/textColorPrimary"
            android:background="?android:attr/selectableItemBackground"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:clickable="true"
            android:textSize="16sp"/>



        <TextView
            android:id="@+id/submenu_download"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:includeFontPadding="false"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/menu_download"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?android:attr/textColorPrimary"
            android:background="?android:attr/selectableItemBackground"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:clickable="true"
            android:textSize="16sp"/>



    </LinearLayout>

</androidx.cardview.widget.CardView>